--- a/blog/templates/blog/home_page.html
+++ b/blog/templates/blog/home_page.html
@@ -107,7 +107,7 @@
             </li>
             {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+              <a class="nav-link" href="{% url 'profile_view' profile_slug %}">Profile</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'post' %}">Post</a>
